Tutorial with Alex

--- a/scripts/clean/clean_introduction.ipynb
+++ b/scripts/clean/clean_introduction.ipynb
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We always import pacakges at the the top of our script.  \n",
+    "We always import packages at the the top of our script.  \n",
     "For now, the only packages that we need are `pandas`, `numpy`, and `os`.  \n",
     "- pandas will help us interact with your data as a table, people call tables in pandas **dataframes**\n",
     "- numpy is our math package; this will help us alter and create data\n",
@@ -83,7 +83,7 @@
     "\n",
     "Create a new cell and turn it into a Markdown cell by pressing `m`. Markdown is a syntax to create formatted text.  \n",
     "Type some stuff out and run the cell (`shift + enter`); here is a [link](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet) for info on how to format Markdown text.  \n",
-    "Now click on the link and turn in back into a code cell by pressing `y`.\n",
+    "Now click on the cell and turn it back into a code cell by pressing `y`.\n",
     "\n",
     "---"
    ]
@@ -105,7 +105,7 @@
     "- `os` is a **package**; packages are a collection of **modules**.    \n",
     "- `path` is a **module** within the package; modules are a collection of **functions**.  \n",
     "- `abspath()` is a **function** within the path module, within the os package.  \n",
-    "notice the parantheses at the end of `abspath()` &rarr; this means it is a function; functions take an input and will do something or create something\n",
+    "Notice the parantheses at the end of `abspath()` &rarr; this means it is a function; functions take an input and will do something or create something.\n",
     "\n",
     "`os.path.abspath()` with `''` as an input will tell me what file directory I am currently working in.\n",
     "\n",
@@ -117,17 +117,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/melissagrimes/Documents/GitHub/python_for_uxr/scripts/clean'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.path.abspath('')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "This prints out the file directory that we are currently working in to JupyterLab.  \n",
-    "If we look in our finder, we can see that this filepath refers to where or Jupyter Notebook file is saved.\n",
+    "If we look in our finder, we can see that this filepath refers to where our Jupyter Notebook file is saved.\n",
     "\n",
     "If we print something out to JupyterLab, it isn't saved anywhere.  \n",
     "I want to save the filepath to refer back to later.  \n",
@@ -139,10 +152,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "current_directory = os.path.abspath('')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,10 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/melissagrimes/Documents/GitHub/python_for_uxr/scripts/clean'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_directory"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -186,10 +214,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "github_directory = os.path.dirname(os.path.dirname(os.path.dirname(current_directory)))\n",
+    "data_filepath = os.path.join(github_directory, 'raw_data', 'practice_data.xlsx')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/melissagrimes/Documents/GitHub/raw_data/practice_data.xlsx\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (data_filepath)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,10 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# raw_data = pd.read_excel(data_filepath)\n",
+    "# raw_data"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -232,7 +276,7 @@
    "source": [
     "Now you have your data in JupyterLab! It is stored as a pandas **[DataFrame](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.html)** .  \n",
     "DataFrames have an **[Index](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Index.html)**; the indices are the row numbers and the column names.  \n",
-    "DataFrames are made up or rows as columns; each row or each column by itself is a **[Series](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.html)** .  \n",
+    "DataFrames are made up of rows and columns; each row or each column by itself is a **[Series](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.html)** .  \n",
     "\n",
     "**Let's save a copy of the data as `df` (short for DataFrame)**; this way, we'll always be able to refer back to the raw data without loading it back in from the file.  \n",
     "Run the line of code below and from here on, we'll only mess around with our data as `df`."
@@ -240,11 +284,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = raw_data.copy()"
+    "df = raw_data.copy()\n",
+    "df = df.drop(0)"
    ]
   },
   {
@@ -254,7 +299,7 @@
     "## 3. What Are the Data & How Are They Stored\n",
     "---\n",
     "**Now that we are here, a quick note on error messages:**  \n",
-    "You will make *a lot* of errors and desciphering what went wrong will be confusing.  \n",
+    "You will make *a lot* of errors and deciphering what went wrong will be confusing.  \n",
     "When you get an error message, it will print out this long list of gibberish.  \n",
     "Most of it is useless; the information that you want is:\n",
     "1. Which line of code (that you wrote) is not working?\n",
@@ -273,8 +318,8 @@
     "To change, delete, or manipulate data you'll need to be able to select portions of it.\n",
     "\n",
     "For each of the data types:\n",
-    "1. Using the functions below, select and print a chunk of data into Jupyter Lab\n",
-    "2. To confirm that type of data that you've selected, run `type(your data selection)`\n",
+    "1. Using the functions below, select and print a chunk of data into Jupyter Lab.\n",
+    "2. To confirm the type of data that you've selected, run `type(your data selection)`.\n",
     "\n",
     "Data types to select:\n",
     "- DataFrame\n",
@@ -286,10 +331,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[[\"Q10\", \"Q12\"]]\n",
+    "# df[[i for i in df.columns if \"_TEXT\" in i]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.Q306_2.astype(float))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -370,10 +447,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'[0] not found in axis'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-79e4c375351e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/python_for_uxr_env/lib/python3.8/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   3988\u001b[0m                 \u001b[0mweight\u001b[0m  \u001b[0;36m1.0\u001b[0m     \u001b[0;36m0.8\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3989\u001b[0m         \"\"\"\n\u001b[0;32m-> 3990\u001b[0;31m         return super().drop(\n\u001b[0m\u001b[1;32m   3991\u001b[0m             \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3992\u001b[0m             \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/python_for_uxr_env/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, axis, index, columns, level, inplace, errors)\u001b[0m\n\u001b[1;32m   3934\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32min\u001b[0m \u001b[0maxes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3935\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3936\u001b[0;31m                 \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_drop_axis\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3937\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3938\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0minplace\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/python_for_uxr_env/lib/python3.8/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m_drop_axis\u001b[0;34m(self, labels, axis, level, errors)\u001b[0m\n\u001b[1;32m   3968\u001b[0m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3969\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3970\u001b[0;31m                 \u001b[0mnew_axis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdrop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlabels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0merrors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3971\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0maxis_name\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnew_axis\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3972\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/anaconda3/envs/python_for_uxr_env/lib/python3.8/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mdrop\u001b[0;34m(self, labels, errors)\u001b[0m\n\u001b[1;32m   5015\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5016\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0merrors\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"ignore\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 5017\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{labels[mask]} not found in axis\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   5018\u001b[0m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m~\u001b[0m\u001b[0mmask\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   5019\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: '[0] not found in axis'"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.drop(0)\n",
+    "df.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -453,9 +549,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:thriving_spring2020]",
+   "display_name": "Python [conda env:python_for_uxr_env]",
    "language": "python",
-   "name": "conda-env-thriving_spring2020-py"
+   "name": "conda-env-python_for_uxr_env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -467,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
